--- a/src/assets/css/style.styl
+++ b/src/assets/css/style.styl
@@ -5,6 +5,9 @@
 html, body
     width 100%
     height 100%
+    margin 0 auto
+    min-width 300px
+    max-width 640px
 .rise
     background-color #5cb85c
 .fall
