--- a/src/assets/css/style.styl
+++ b/src/assets/css/style.styl
@@ -12,3 +12,6 @@ html, body
     background-color #5cb85c
 .fall
     background-color #d9534f
+.mint-header
+    &.is-fixed
+        z-index 10 !important
